# src/models/products.js
@@ -1,0 +1,33 @@
+const mongoose = require("mongoose");
+
+const schema = mongoose.Schema({
+  title: {
+    type: String,
+    required: true,
+  },
+  description: {
+    type: String,
+    required: true,
+  },
+  price: {
+    type: Number,
+    required: true,
+  },
+  discount: {
+    type: Number,
+    default: 0,
+  },
+  categoryID: {
+    type: mongoose.Types.ObjectId,
+    ref: "Category",
+    required: true,
+  },
+  image: {
+    type: String,
+    required: true,
+  },
+});
+
+const model = mongoose.model("Product", schema);
+
+module.exports = model;
